--- a/core/staticfiles/css/main.css
+++ b/core/staticfiles/css/main.css
@@ -1,7 +1,7 @@
 /******************************************************************
 Theme Name: Travel 
 Description: 
-Author: Colorlib
+Author: Amir
 Author URI: 
 Version: 1.0
 Created: 
