--- a/core/staticfiles/scss/theme/_variables.scss
+++ b/core/staticfiles/scss/theme/_variables.scss
@@ -1,7 +1,7 @@
 /******************************************************************
 Theme Name: Travel 
 Description: 
-Author: Colorlib
+Author: Amir
 Author URI: 
 Version: 1.0
 Created: 
