--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -8,7 +8,7 @@
     <!-- Favicon-->
     <link rel="shortcut icon" href="{% static 'img/fav.png' %}">
     <!-- Author Meta -->
-    <meta name="author" content="colorlib">
+    <meta name="author" content="AMIR">
     <!-- Meta Description -->
     <meta name="description" content="">
     <!-- Meta Keyword -->
@@ -19,9 +19,7 @@
     <title>Travel</title>
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
-    <!--
-			CSS
-			============================================= -->
+    <!-- CSS -->
     <link rel="stylesheet" href="{% static 'css/linearicons.css' %}">
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
@@ -108,11 +106,11 @@
             <div class="row">
                 <div class="col-lg-3  col-md-6 col-sm-6">
                     <div class="single-footer-widget">
-                        <h6>About Agency</h6>
+                        <h6>About BuzzBlog</h6>
                         <p>
-                            The world has become so fast paced that people don’t want to stand by reading a page of
-                            information, they would much rather look at a presentation and understand the message. It
-                            has come to a point
+                            BuzzBlog is a modern news and blog platform featuring verified authors, rich posts,
+                            categories, likes, and comments. It blends editorial storytelling with community
+                            interaction, delivering timely updates and curated content.
                         </p>
                     </div>
                 </div>
@@ -122,18 +120,18 @@
                         <div class="row">
                             <div class="col">
                                 <ul>
-                                    <li><a href="#">Home</a></li>
+                                    <li><a href="{% url 'website:index' %}">Home</a></li>
                                     <li><a href="#">Feature</a></li>
                                     <li><a href="#">Services</a></li>
-                                    <li><a href="#">Portfolio</a></li>
+                                    <li><a href="https://github.com/IamAmirKohzadi">Portfolio</a></li>
                                 </ul>
                             </div>
                             <div class="col">
                                 <ul>
                                     <li><a href="#">Team</a></li>
                                     <li><a href="#">Pricing</a></li>
-                                    <li><a href="#">Blog</a></li>
-                                    <li><a href="#">Contact</a></li>
+                                    <li><a href="{% url 'website:blog-home' %}">Blog</a></li>
+                                    <li><a href="{% url 'website:contact' %}">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -143,18 +141,16 @@
                     <div class="single-footer-widget">
                         <h6>Newsletter</h6>
                         <p>
-                            For business professionals caught between high OEM price and mediocre print and graphic
-                            output.
+                            Subscribe to our newsletter to stay tuned with our latest updates!
                         </p>
-                        <div >
-                            <form
-                                action="{% url 'website:newsletter' %}"
-                                method="post" class="subscription relative">
+                        <div>
+                            <form action="{% url 'website:newsletter' %}" method="post" class="subscription relative">
                                 {% csrf_token %}
                                 <div class="input-group d-flex flex-row">
                                     <input name="email" placeholder="Email Address" onfocus="this.placeholder = ''"
                                         onblur="this.placeholder = 'Email Address '" required="" type="email">
-                                    <button class="btn bb-btn" type="submit"><span class="lnr lnr-location"></span></button>
+                                    <button class="btn bb-btn" type="submit"><span
+                                            class="lnr lnr-location"></span></button>
                                 </div>
                                 <div class="mt-10 info"></div>
                             </form>
@@ -180,12 +176,10 @@
 
             <div class="row footer-bottom d-flex justify-content-between align-items-center">
                 <p class="col-lg-8 col-sm-12 footer-text m-0">
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;
                     <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-                    made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com"
-                        target="_blank">Colorlib</a>
-                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
+                        href="https://github.com/IamAmirKohzadi" target="_blank">Amir Kohzadi</a>
                 </p>
                 <div class="col-lg-4 col-sm-12 footer-social">
                     <a href="#"><i class="fa fa-facebook"></i></a>
